--- a/app/views/grams/_form.html.erb
+++ b/app/views/grams/_form.html.erb
@@ -1,6 +1,5 @@
-<h1>New Gram</h1>
-
 <%= simple_form_for @gram do |f| %>
   <%= f.input :message %>
+  <%= f.file_field :picture %>
   <%= f.submit "Post!" %>
 <% end %>
